--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Top Tips from the Pros for Roof Leak Repair in Dandenong</title>
   <meta name="description" content="Fixing roof leaks in Dandenong keeps your home safe from water and mold damage, saving you money over time.">
-  <link rel="canonical" href="https://roofplumberdandenong.vercel.app">
+  <link rel="canonical" href="https://roofleakrepair.vercel.app">
 <meta name="robots" content="index,follow">
   
     <style>
